✨ Update documentation to highlight Google Gemini 2.0 Flash integration
- Added Gemini badge to README
- Updated Prerequisites section to mention Gemini API
- Updated .env.example with Gemini as recommended provider
- Added Google acknowledgment
- Updated project tagline to include Gemini

--- a/backend/.env.example
+++ b/backend/.env.example
@@ -6,7 +6,11 @@ TIGER_DB_NAME=tsdb
 TIGER_DB_USER=tsdbadmin
 TIGER_DB_PASSWORD=your_password_here
 
-# AI Provider (choose one or both)
+# AI Provider (choose one)
+# Google Gemini (Recommended - Fast & Free tier available)
+GEMINI_API_KEY=your-gemini-api-key-here
+
+# Alternative providers
 OPENAI_API_KEY=sk-your-openai-key
 ANTHROPIC_API_KEY=sk-ant-your-anthropic-key
 
